manifests/manifest-example-1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bugsink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bugsink
  template:
    metadata:
      labels:
        app: bugsink
    spec:
      containers:
        - name: bugsink
          image: '<hidden>/bugsink/bugsink:1.1.2'
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
              ephemeral-storage: 500Mi
            requests:
              cpu: 200m
              memory: 500Mi
              ephemeral-storage: 500Mi
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
